# console-typeracer

./: CMakeLists.txt  build.sh  game.c  game.h  input.txt  main.c  parser.c  parser.h  sourceValidator.h  start.sh  start_client.sh  start_server.sh
cJSON-lib/: CMakeLists.txt
client/: CMakeLists.txt  client.c  client.h  game.c  game.h  inputHandler.c  inputHandler.h  jsonHandler.c  jsonHandler.h  main.c  sourceValidator.c  sourceValidator.h  terminal.c  terminal.h  typeracerStructures.h
server/: CMakeLists.txt  main.c  server.c  server.h
shared/: inputHandler.c  inputHandler.h  jsonHandler.c  jsonHandler.h  sourceValidator.c  sourceValidator.h  terminal.c  terminal.h  typeracerStructures.h
